--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,16 @@
 html {
   font-family: ;
   color: ;
-  background-color: #282828;
+  background-color: #00FA9A;
 }
 
 body {
   font-family: "Arial", "Helvetica", sans-serif;
-  background-color: powderblue;
+  background-color: LightGreen;
 }
 
 body {
-  border-color: #06F7F9;
+  border-color: #3CB371;
   border-style: solid;
   border-width: 5px;
   margin: 30px;
